--- a/style.css
+++ b/style.css
@@ -1,3 +1,29 @@
 .logo {
-  width: 40%;
+  width: 50%; 
+}
+
+h1 {
+  color: #7ea0b4;
+  font-family: 'Rouge Script', cursive;
+  font-weight: normal; 
+  text-shadow: 1px 1px 2px #082b34;
+}
+
+p {
+  margin-top: 3em;
+  border: solid black 1px;
+  padding: 2px;
+}
+
+.carousel {
+  margin-top: 1.5em;;
+}
+
+h1 {
+  margin-top: 2.2em;
+}
+
+footer {
+  background: lightskyblue;
+  padding: 15px;
 }
