--- a/style.css
+++ b/style.css
@@ -9,9 +9,8 @@ h1 {
   text-shadow: 1px 1px 2px #082b34;
 }
 
-p {
+.presentation {
   margin-top: 3em;
-  border: solid black 1px;
   padding: 2px;
 }
 
@@ -25,5 +24,5 @@ h1 {
 
 footer {
   background: lightskyblue;
-  padding: 15px;
+  padding: 30px;
 }
