--- a/style.css
+++ b/style.css
@@ -1,12 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Parisienne&display=swap');
+
 .logo {
-  width: 50%; 
+  width: 30em;
+  margin-top: 4em;
+  
 }
 
 h1 {
   color: #7ea0b4;
-  font-family: 'Rouge Script', cursive;
+  font-family: 'Parisienne', cursive;
   font-weight: normal; 
   text-shadow: 1px 1px 2px #082b34;
+  font-size: 4.5em;
+  margin-left: 1em;
+  
 }
 
 .presentation {
