--- a/style.css
+++ b/style.css
@@ -7,33 +7,10 @@
   }
 }
 
-/*@media screen and (max-width: 700px) {
- td, th {
-    font-size: 1.8em;
-  }
-  .btnevent {
-    font-size: 1.5em;
-  }
-}
-
-@media screen and (max-width: 600px) {
- td, th {
-    font-size: 3em;
-  }
-  .btnevent {
-    font-size: 2em;
-  }
-} 
-*/
-
 
 body {
   background-image: url(./lightbubblebg.png);
 
-}
-
-table {
-  width: 50%;
 }
 
 .logo {
@@ -61,10 +38,9 @@ h1 {
   
 }
 
-p, article, td {
+p, article{
   font-family: 'Open Sans', sans-serif;
 }
-
 
 .carousel {
   margin-top: 1.5em;
@@ -90,10 +66,6 @@ footer {
   width: 2em;
 }
 
-.thermal, .compostelle, .dordogne, .newyear {
-width: 25em;
-height: 20em;
-}
 
 nav {
   width: 100%;
